objects/salesedgedemo__Templated_Email__c.object
<CustomObject>
    <fields>
        <fullName>salesedgedemo__Markup__c</fullName>
        <label>Markup</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salesedgedemo__Text__c</fullName>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Engage Demo Email Template</label>
    <nameField>
        <label>Engage Demo Email Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engage Demo Email Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>